Fixed flickering issue

--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -56,7 +56,7 @@
 }
 @keyframes fadeup {
     from {
-        transform: translateY(50%);
+        transform: translateY(10%);
         opacity: 0;
     }
 
